<resources>
    <string name="app_name">Odqrij svet</string>
    <string name="datotekaZVsebino">podatki.txt</string>
    <string name="add_activity_name">Dodaj novo lokacijo</string>
    <string name="datotekaZVsebinoUser">userNov.txt</string>
    <string name="obvestiloNiLokacijskihStoritevDetail">Za prikaz razdalje morate omogočiti lokacijske storitve</string>
    <string name="napakaNamig">Napaka pri iskanju namiga!</string>
    <string name="strLongitude">longitude</string>
    <string name="strLatitude">latitude</string>
    <string name="strZoom">zoom</string>
    <string name="strBearing">bearing</string>
    <string name="strTilt">tilt</string>
    <string name="strPrekinjenoSkeniranje">Prekinili ste skeniranje!</string>
    <string name="activityAddedName">Lokacija uspešno dodana</string>
    <string name="buttonDownloadQR">Prikaži QR KODO</string>
    <string name="latLngUseGPSnoSignal">Uporabi trenutno lokacijo - Za vklop omogočite lokacijo</string>
    <string name="toastEnterAllData">Prosimo vnesite vse podatke!</string>
    <string name="toastEnterCorrectCoordinates">Prosimo vnesite veljavne koordinate!</string>
    <string name="toastSuccessAdded">Nova lokacija je bila upšeno poslana!</string>
    <string name="toastFailAdded">Internetna povezava ni na voljo - lokacija ni bila poslana</string>
    <string name="latLngUseGPS">Uporabi trenutno lokacijo</string>
    <string name="editTextIme">Ime</string>
    <string name="editTextNaslov">Naslov</string>
    <string name="editTextOpis">Opis</string>
    <string name="editTextNamig">Namig</string>
    <string name="editTextLat">od -90° do +90°</string>
    <string name="editTextLng">od -180° do +180°</string>
    <string name="buttonAddLocation">Dodaj lokacijo&#160;&#160;&#160;</string>
    <string name="toastDatabaseError">Napaka pri povezavi z bazo!</string>
    <string name="infoLoading">Nalagam lokacije&#8230;</string>
    <string name="infoNoConnection">Za prenos lokacij je potrebna internetna povezava!</string>
    <string name="infoFoundAll">Čestitamo, odkrili ste že vse lokacije!</string>
    <string name="infoFoundNone">Odkril nisi še nobene lokacije. \nOdpravi se na pot in skeniraj QR kode!</string>
    <string name="infoNoneFound">Ne najdem lokacij!</string>
    <string name="toastNoLoactionsToScan">Seznam lokacij je prazen!</string>
    <string name="editTextSearch">Išči lokacijo</string>
    <string name="buttonAllLocations">Seznam iskanih lokacij</string>
    <string name="buttonFoundLocations">Najdene lokacije</string>
    <string name="activityEditLocationName">Uredi moje lokacije</string>
    <string name="buttonSaveLocation">Posodobi lokacijo&#160;&#160;&#160;</string>
    <string name="toastNoMyLocations">Najprej ustvarite novo lokacijo</string>
    <string name="buttonDeleteLocation">Izbriši lokacijo</string>
    <string name="menuSearch">Išči</string>
    <string name="menuAdd">Dodaj novo lokacijo</string>
    <string name="menuEdit">Uredi lokacije</string>
    <string name="descStopSearch">Ustavi iskanje</string>
    <string name="descList">Seznam lokacij</string>
    <string name="descScan">Skeniraj</string>
    <string name="descMap">Zemljevid</string>
    <string name="nazajNaSeznam">NAZAJ</string>
    <string name="gumbPodrobnosti">PODROBNOSTI</string>
    <string name="strZagon">zagon</string>
    <string name="strZagon2">zagon2</string>
    <string name="strOpis">Opis:</string>
    <string name="strNamig">Namig:</string>
    <string name="strPodrobnosti">Podrobnosti</string>
    <string name="strRezultat">Rezultat skeniranja</string>
    <string name="napaka">Napaka!</string>
    <string name="toastSuccessUpdate">Lokacija je bila uspešno posodobljena!</string>
    <string name="toastFailUpdate">Napaka pri posodabljanju lokacije</string>
    <string name="toastFailUpdateNoConnection">Za posodabljanje lokacije potrebujete internetno povezavo</string>
    <string name="toastSuccessDelete">Lokacija je bila uspešno izbrisana</string>
    <string name="alertDeleteMessage">Ali ste prepričani da želite izbrisati lokacijo?</string>
    <string name="alertDeleteTitle">POZOR!</string>
    <string name="alertDeleteConfirm">Izbriši</string>
    <string name="alertDeleteCancel">Prekliči</string>
    <string name="prikaziZemljevid">PRIKAŽI NA ZEMLJEVIDU</string>
    <string name="strPolozaj">polozajZemljevida</string>
    <string name="labelIme">Ime*:</string>
    <string name="labelNaslov">Naslov*:</string>
    <string name="labelOpis">Opis*:</string>
    <string name="labelNamig">Namig*:</string>
    <string name="labelLat">Zemljepisna širina*:</string>
    <string name="labelLng">Zemljepisna dolžina*:</string>
    <string name="errorFirstTime">Napaka prvega zagona</string>
    <string name="alertWelcomeConfirm">Vredu</string>
    <string name="alertWelcomeTitle">Pozdravljeni!</string>
    <string name="alertWelcomeMessage">V realnem svetu obiščite lokacije, ki jih vidite na seznamu in zemljevidu. Na lokaciji s pomočjo namiga poiščite QR kode in jih skenirajte. \nS klikom na gumb + lahko dodate svoje lokacije, ki jih lahko potem tudi urejate. </string>
    <string name="strIzPodrobnosti">izPodrobnosti</string>
    <string name="strNiInternetaMaps">Za prenos lokacij je potrebna internetna povezava!</string>
    <string name="intentBarcode">barcode</string>
    <string name="intentImeLokacije">ime_lokacije</string>
    <string name="intentParentAct">parentAct</string>
    <string name="intentNaZemljevidu">naZemljevidu</string>
    <string name="strPrviZagonFile">PrviZagonFile</string>
</resources>
