<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/label_ime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelIme"
            android:textSize="15sp"
            android:textColor="@color/matteBlackText"
            android:labelFor="@+id/ime"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ime"
            android:hint="@string/editTextIme"
            android:inputType="text"
            android:maxLength="50"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/label_naslov"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelNaslov"
            android:textSize="15sp"
            android:textColor="@color/matteBlackText"
            android:labelFor="@+id/naslov"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/naslov"
            android:hint="@string/editTextNaslov"
            android:inputType="text"
            android:maxLength="50"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/label_opis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelOpis"
            android:textSize="15sp"
            android:textColor="@color/matteBlackText"
            android:labelFor="@+id/opis"/>
        <EditText
            android:id="@+id/opis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editTextOpis"
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:maxLines="8"
            android:gravity="top"
            android:maxLength="1000"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/label_namig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelNamig"
            android:textSize="15sp"
            android:textColor="@color/matteBlackText"
            android:labelFor="@+id/namig" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/namig"
            android:hint="@string/editTextNamig"
            android:maxLength="100"
            android:inputType="text"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/label_lat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelLat"
            android:textSize="15sp"
            android:textColor="@color/matteBlackText"
            android:labelFor="@+id/lat"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lat"
            android:hint="@string/editTextLat"
            android:inputType="numberDecimal|numberSigned"
            android:maxLength="100"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/label_lng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelLng"
            android:textSize="15sp"
            android:textColor="@color/matteBlackText"
            android:labelFor="@+id/lng" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lng"
            android:hint="@string/editTextLng"
            android:inputType="numberDecimal|numberSigned"
            android:maxLength="100"
            />
    </LinearLayout>
        <CheckBox
            android:id="@+id/use_gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/latLngUseGPS" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonAddLocation"
            android:onClick="poslji"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/colorPrimaryDark"
            android:drawableEnd="@drawable/ic_send_white_24dp"
            />
    </LinearLayout>
</ScrollView>