<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_edit"
            android:textColor="@color/matteBlackText"
            android:padding="10dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="16sp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/label_ime_e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelIme"
            android:textSize="15sp"
            android:textColor="@color/matteBlackText"
            android:labelFor="@+id/ime_edit"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ime_edit"
            android:hint="@string/editTextIme"
            android:inputType="text"
            android:maxLength="50"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/label_naslov_e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelNaslov"
            android:textSize="15sp"
            android:textColor="@color/matteBlackText"
            android:labelFor="@+id/naslov_edit"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/naslov_edit"
            android:hint="@string/editTextNaslov"
            android:inputType="text"
            android:maxLength="50"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/label_opis_e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelOpis"
            android:textSize="15sp"
            android:textColor="@color/matteBlackText"
            android:labelFor="@+id/opis_edit"/>
        <EditText
            android:id="@+id/opis_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editTextOpis"
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:maxLines="8"
            android:gravity="top"
            android:maxLength="1000"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/label_namig_e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelNamig"
            android:textSize="15sp"
            android:textColor="@color/matteBlackText"
            android:labelFor="@+id/namig_edit"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/namig_edit"
            android:hint="@string/editTextNamig"
            android:maxLength="100"
            android:inputType="text"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/label_lat_e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelLat"
            android:textSize="15sp"
            android:textColor="@color/matteBlackText"
            android:labelFor="@+id/lat_edit"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lat_edit"
            android:hint="@string/editTextLat"
            android:inputType="numberDecimal|numberSigned"
            android:maxLength="100"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/label_lng_e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelLng"
            android:textSize="15sp"
            android:textColor="@color/matteBlackText"
            android:labelFor="@+id/lng_edit" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lng_edit"
            android:hint="@string/editTextLng"
            android:inputType="numberDecimal|numberSigned"
            android:maxLength="100"
            />
    </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonSaveLocation"
            android:onClick="posodobi"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/colorPrimaryDark"
            android:drawableEnd="@drawable/ic_send_white_24dp"
            />
        <Button
            android:id="@+id/download_qr_code_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonDownloadQR"
            android:onClick="prenesiQr"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/colorAccent"
            android:drawableStart="@drawable/ic_file_download_white_24dp"
            />

        <Button
            android:id="@+id/delete_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonDeleteLocation"
            android:onClick="deleteLoc"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/deleteRed"
            android:drawableStart="@drawable/ic_delete_white_24dp"
            />
    </LinearLayout>
</ScrollView>